test/files/neg/t7899.check
t7899.scala:5: error: type mismatch;
 found   : Int => Int
 required: (=> Int) => ?
    foo(identity)()
        ^
one error found
